<resources>
    <string name="app_name">My Application</string>
    <string name="logo">logo</string>
    <string name="checkmeup">CheckMeUp!</string>
    <string name="doctors">Doctors</string>
    <string name="select_user">Select User</string>
    <string name="paramedics">Paramedics</string>
    <string name="nurse">Nurse</string>
    <string name="plate_number">Plate Number</string>
    <string name="homebutton">homebutton</string>
    <string name="password">Password</string>
    <string name="staff_id">Staff ID</string>
    <string name="log_in">LOG IN</string>
    <string name="sysadmin">System Administrator</string>
    <string name="ambulance">Ambulance</string>
    <string name="user">User</string>
    <string name="home_statement">Select data to view</string>
    <string name="title_activity_user_page">user_page</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="title_activity_main2">MainActivity2</string>
    <string name="select_ambulance">Select ambulance</string>
    <string name="ambu1_plate">WC 3095 L</string>
    <string name="ambu2_plate">WJC 4646</string>
    <string name="ambu3_plate">WUM 5785</string>
    <string name="admin_ambu_instruction">Tap on the button to activate</string>
    <string name="user_list">User List</string>
    <string name="staff_name">Staff Name</string>
    <string name="add_user">Add user</string>
    <string name="create_user">Create User</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="tap_to_type">Tap to type</string>
    <string name="welcome">Welcome</string>
    <string name="incoming">Incoming</string>
    <string name="current">Current</string>
    <string name="update">Update</string>
    <string name="doc_home_ins">Select the type of patient</string>
    <string name="information">Information</string>
    <string name="vital_chart">Vital Chart</string>
    <string name="patient_name">Patient Name</string>
    <string name="room_no">Room No</string>
    <string name="patient_list">Patient List</string>
    <string name="vital_sign_chart">Vital Sign Chart</string>
    <string name="vital_update">Vital Update</string>
    <string name="amount">Amount :</string>
    <string name="item">Item :</string>
    <string name="remark">Remark :</string>
    <string name="belonging">Belonging</string>
    <string name="handover_item">Handover Item</string>
    <string name="add_item">+ Add Item</string>
    <string name="item_used">Item Used</string>
    <string name="used">Used</string>
    <string name="items">Items</string>
    <string name="remarks">Remarks</string>
    <string name="normal">Normal</string>
    <string name="yes">Yes</string>
    <string name="partial">Partial</string>
    <string name="dilated">Dilated</string>
    <string name="fixed">Fixed</string>
    <string name="none">None</string>
    <string name="vital">Vital</string>
    <string name="examination">Examination</string>
    <string name="initial_treatment">Initial Treatment</string>
    <string name="no">No</string>
    <string name="if_yes_please_state">If yes, please state</string>
    <string name="diagnosis">Diagnosis</string>
    <string name="name">Name</string>
    <string name="title_activity_test">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="status">Status</string>
    <string name="preparation">Preparation</string>
    <string name="null_value">-</string>
</resources>
