<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E6E3E3"
    tools:context=".admin_login">


    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="#EE2525"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/checkmeup"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="148dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.299"
        app:srcCompat="@drawable/profile" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="116dp"
        android:layout_height="118dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/objects" />

    <Button
        android:id="@+id/home_button"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/iconfinder_home_126572"
        android:contentDescription="@string/homebutton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:srcCompat="@drawable/iconfinder_home_126572" />

    <EditText
        android:id="@+id/editTextTextPersonName"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:autofillHints=""
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/staff_id"
        android:inputType="textPersonName"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#696969"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.557" />

    <EditText
        android:id="@+id/editTextNumberPassword"
        android:layout_width="249dp"
        android:layout_height="42dp"
        android:backgroundTint="@color/black"
        android:ems="10"
        android:hint="@string/password"
        android:importantForAutofill="no"
        android:inputType="numberPassword"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="#696969"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.631"
        tools:ignore="LabelFor" />

    <Button
        android:id="@+id/button"
        android:layout_width="121dp"
        android:layout_height="60dp"
        android:backgroundTint="#EE2525"
        android:fontFamily="@font/segoeui"
        android:text="@string/log_in"
        android:textSize="20sp"
        android:textColor="@color/white"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.742" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:text="@string/sysadmin"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.465" />

</androidx.constraintlayout.widget.ConstraintLayout>