<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".doc_home"
    android:background="#E6E3E3">

    <TextView
        android:id="@+id/textView3"
        android:layout_width="match_parent"
        android:layout_height="101dp"
        android:background="#EE2525"
        android:fontFamily="@font/segoeui"
        android:gravity="center"
        android:text="@string/checkmeup"
        android:textColor="#FFFFFF"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.281"
        app:srcCompat="@drawable/profile" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/segoeui"
        android:text="@string/doc_home_ins"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/ambu1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.51"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.477" />

    <Button
        android:id="@+id/btIncoming"
        android:layout_width="209dp"
        android:layout_height="67dp"
        android:layout_marginBottom="4dp"
        android:backgroundTint="#EE2525"
        android:fontFamily="@font/segoeui"
        android:text="@string/incoming"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="75dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toTopOf="@+id/btCurrent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/btCurrent"
        android:layout_width="209dp"
        android:layout_height="67dp"
        android:layout_marginBottom="180dp"
        android:backgroundTint="#EE2525"
        android:fontFamily="@font/segoeui"
        android:text="@string/current"
        android:textColor="@color/white"
        android:textSize="20sp"
        app:cornerRadius="75dp"
        app:layout_constrainedHeight="true"
        app:layout_constrainedWidth="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.549"
        app:layout_constraintStart_toStartOf="parent" />


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/segoeui"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="25sp"
        app:layout_constraintBottom_toTopOf="@+id/btIncoming"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView"
        app:layout_constraintVertical_bias="0.025" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="116dp"
        android:layout_height="118dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/objects" />

    <Button
        android:id="@+id/logout"
        android:layout_width="29dp"
        android:layout_height="29dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/logout"
        android:contentDescription="@string/logo"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>